# clp-ffi-py

./: CMakeLists.txt  lint-tasks.yml  setup.py
src/clp_ffi_py/ir/: Query.cpp  Query.hpp
src/wrapped_facade_headers/: CMakeLists.txt
src/wrapped_facade_headers/include/: msgpack.hpp
src/wrapped_facade_headers/wrapped_facade_headers/: msgpack.hpp
